# ai-light-show-v4

./: .gitignore  .graphifyignore  Dockerfile.backend  Dockerfile.frontend  PHASE_1_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PHASE_5_IMPLEMENTATION.md  PHASE_6_IMPLEMENTATION.md  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/analysis/: analyzer.py  cache.py  schema.py  signals.py
backend/app/: analysis_ir.py  canvas.py  chunked_frames.py  diagnostics.py  fixture_mapping.py  fixtures.py  layers.py  main.py  models.py  modulation.py  preset.py  presets_builtin.py  render_contract.py  render_job.py  shaders.py  test_patterns.py  timeline.py  transitions.py
backend/diagnostics/: reporter.py
backend/export/: mapper.py  schema.py
backend/modulation/: engine.py  ops.py  sources.py
backend/presets/: bouncing_ball_reference_v1.json  loader.py  ocean_waves.json  schema.py  undersea_pulse_01.json  validator.py
backend/render/: artifact.py  compat.py  seed.py
backend/routes/: canvas.py  health.py  playback.py  render.py  songs.py
backend/session/: state.py
backend/shaders/: beat_flash.py  blend.py  bouncing_ball.py  gradient.py  ocean_waves.py  raindrops.py  registry.py  solid.py  spectroid_chase.py  types.py  wave.py
backend/tests/: __init__.py  conftest.py  test_analysis_ir.py  test_chunked_frames.py  test_diagnostics.py  test_fixture_export.py  test_layer_library.py  test_modulation.py  test_phase_02.py  test_phase_03.py  test_phase_04.py  test_phase_06.py  test_preset_schema.py  test_render_contract.py  test_shaders.py  test_timeline.py
backend/timeline/: director.py  schema.py  transitions.py
(+122 files in other folders)
