[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ai-light-show"
version = "0.1.0"
description = "AI-driven light show generator from audio"
authors = [{name = "AI Light Show Team"}]
python-requires = ">=3.11"

[tool.poetry]
name = "ai-light-show"
version = "0.1.0"
description = "AI-driven light show generator from audio"
authors = ["AI Light Show Team <team@example.com>"]
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
numpy = "^1.26.0"
pillow = "^10.0.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
pylint = "^3.0.0"
mypy = "^1.7.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
